--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -78,7 +78,7 @@ jobs:
           GKI_ROOT=$(pwd)
           echo "[+] GKI_ROOT: $GKI_ROOT"
           echo "[+] Copy KernelSU driver to $GKI_ROOT/common/drivers"
-          ln -sf KernelSU/kernel $GKI_ROOT/common/drivers/kernelsu
+          ln -sf $GKI_ROOT/KernelSU/kernel $GKI_ROOT/common/drivers/kernelsu
           echo "[+] Add KernelSU driver to Makefile"
           DRIVER_MAKEFILE=$GKI_ROOT/common/drivers/Makefile
           DRIVER_KCONFIG=$GKI_ROOT/common/drivers/Kconfig
