--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -3,77 +3,57 @@ name: make_ko
 on:
   workflow_dispatch:
     inputs:
-      version:
-        required: true
-        type: string
-        default: android12-5.10-2024-05
-        description: >
-          Output directory of gki,
-          for example: android12-5.10
-
       tag:
         required: true
         type: string
-        default: android12-5.10-2024-05
+        default: android-4.19-stable
         description: >
-          Part of branch name of common kernel manifest,
-          for example: android12-5.10-2021-11
+          android12-5.10-2024-05
 
+      ksu_v:
+        required: true
+        type: string
+        default: v0.9.0
+        description: >
+          ksu branch
+
+          
       debug:
         required: false
         type: boolean
         default: false
+        
 
 
 jobs:
   build:
-    name: Build 
     runs-on: ubuntu-latest
-    env:
-      CCACHE_COMPILERCHECK: "%compiler% -dumpmachine; %compiler% -dumpversion"
-      CCACHE_NOHASHDIR: "true"
-      CCACHE_HARDLINK: "true"
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 8192
-          temp-reserve-mb: 2048
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-
-      - uses: actions/checkout@v4
-        with:
-          path: KernelSU
-          fetch-depth: 0
+    
+      - uses: actions/checkout@v3
 
       - name: Setup kernel source
         run: |
           echo "Free space:"
           df -h
           cd $GITHUB_WORKSPACE
-          sudo apt-get install repo -y
+          sudo apt-get install repo -y > /dev/null
           mkdir android-kernel && cd android-kernel
           repo init --depth=1 --u https://android.googlesource.com/kernel/manifest -b common-${{ inputs.tag }} --repo-rev=v2.16
           REMOTE_BRANCH=$(git ls-remote https://android.googlesource.com/kernel/common ${{ inputs.tag }})
-          DEFAULT_MANIFEST_PATH=.repo/manifests/default.xml
+          echo REMOTE_BRANCH
           if grep -q deprecated <<< $REMOTE_BRANCH; then
             echo "Found deprecated branch: ${{ inputs.tag }}"
-            sed -i 's/"${{ inputs.tag }}"/"deprecated\/${{ inputs.tag }}"/g' $DEFAULT_MANIFEST_PATH
-            cat $DEFAULT_MANIFEST_PATH
+            sed -i 's/"${{ inputs.tag }}"/"deprecated\/${{ inputs.tag }}"/g' .repo/manifests/default.xml
+            cat .repo/manifests/default.xml
           fi
-          repo --version
           repo --trace sync -c -j$(nproc --all) --no-tags
           df -h
 
       - name: Setup KernelSU
-        env:
-          IS_DEBUG_KERNEL: ${{ inputs.debug }}
         run: |
           cd $GITHUB_WORKSPACE/android-kernel
-          rm -rf KernelSU && git clone https://github.com/tiann/KernelSU -b v0.9.0
+          rm -rf KernelSU && git clone https://github.com/tiann/KernelSU -b ${{ inputs.ksu_v }}
           echo "[+] KernelSU setup"
           GKI_ROOT=$(pwd)
           echo "[+] GKI_ROOT: $GKI_ROOT"
@@ -85,8 +65,9 @@ jobs:
           grep -q "kernelsu" "$DRIVER_MAKEFILE" || printf "\nobj-\$(CONFIG_KSU) += kernelsu/\n" >> "$DRIVER_MAKEFILE"
           grep -q "kernelsu" "$DRIVER_KCONFIG" || sed -i "/endmenu/i\\source \"drivers/kernelsu/Kconfig\"" "$DRIVER_KCONFIG"
           echo "[+] Apply KernelSU patches"
+          cd $GKI_ROOT/common/ && curl -sL https://raw.githubusercontent.com/zhlhlf/make_kernel-clang/main/patches.sh | bash
 
-          if [ "$IS_DEBUG_KERNEL" = "true" ]; then
+          if [ ${{ inputs.debug }} = "true" ]; then
             echo "[+] Enable debug features for kernel"
             printf "\nccflags-y += -DCONFIG_KSU_DEBUG\n" >> $GITHUB_WORKSPACE/KernelSU/kernel/Makefile
           fi
@@ -116,6 +97,10 @@ jobs:
         run: |
           pip install ast-grep-cli
           sudo apt-get install llvm-15 -y
+          
+          #去模块生成error
+          sed -i s/'static int warn_unresolved = 0'/'static int warn_unresolved = 1'/g common/scripts/mod/modpost.c
+          
           ast-grep -U -p '$$$ check_exports($$$) {$$$}' -r '' common/scripts/mod/modpost.c
           ast-grep -U -p 'check_exports($$$);' -r '' common/scripts/mod/modpost.c
           sed -i '/config KSU/,/help/{s/default y/default m/}' common/drivers/kernelsu/Kconfig
@@ -138,18 +123,11 @@ jobs:
             sed -i 's/needs unknown symbol/Dont abort when unknown symbol/g' build/kernel/*.sh || echo "No unknown symbol scripts found"
           fi
 
-      - name: Make working directory clean to avoid dirty
-        working-directory: android-kernel
-        run: |
-          rm common/android/abi_gki_protected_exports_* || echo "No protected exports!"
-          git config --global user.email "bot@kernelsu.org"
-          git config --global user.name "KernelSUBot"
-          cd common/ && git add -A && git commit -a -m "Add KernelSU"
-          repo status
-
       - name: Build Kernel/LKM
         working-directory: android-kernel
         run: |
+          rm common/android/abi_gki_protected_exports_* || echo "No protected exports!"
+          
           if [ ! -z ${{ vars.EXPECTED_SIZE }} ] && [ ! -z ${{ vars.EXPECTED_HASH }} ]; then
             export KSU_EXPECTED_SIZE=${{ vars.EXPECTED_SIZE }}
             export KSU_EXPECTED_HASH=${{ vars.EXPECTED_HASH }}
@@ -161,26 +139,16 @@ jobs:
           fi
 
       - name: Prepare artifacts
-        id: prepareArtifacts
         run: |
-          OUTDIR=android-kernel/out/${{ inputs.version }}/dist
-          if [ ! -e $OUTDIR ]; then
-            OUTDIR=android-kernel/dist
-          fi
-          mkdir output
-          if [ "${{ inputs.build_lkm}}" = "true" ]; then 
-            llvm-strip-15 -d $OUTDIR/kernelsu.ko
-            mv $OUTDIR/kernelsu.ko ./output/${{ inputs.version }}_kernelsu.ko
-          else
-            cp $OUTDIR/Image ./output/
-            cp $OUTDIR/Image.lz4 ./output/
-            git clone https://github.com/Kernel-SU/AnyKernel3
-            rm -rf ./AnyKernel3/.git
-            cp $OUTDIR/Image ./AnyKernel3/
-          fi
+          mkdir 666
+          cp -r `find -name "kernelsu.ko"` 666/ || echo "no found ko"
+          cp -r `find -name "Image"` 666/ || echo 
+          llvm-strip-15 -d 666/kernelsu.ko
 
       - name: Upload LKM
-        uses: actions/upload-artifact@v4
+        uses: ncipollo/release-action@v1
         with:
-          name: ${{ inputs.version }}-lkm
-          path: ./output/*_kernelsu.ko
+          tag: ${{ github.run_number }}
+          name: ${{ inputs.tag }}_${{ github.run_number }}
+          artifacts: '666/*'
+
