--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -99,7 +99,7 @@ jobs:
           sudo apt-get install llvm-15 -y
           
           #去模块生成error
-          sed -i s/'static int warn_unresolved = 0'/'static int warn_unresolved = 1'/g common/scripts/mod/modpost.c
+          #sed -i s/'static int warn_unresolved = 0'/'static int warn_unresolved = 1'/g common/scripts/mod/modpost.c
           
           ast-grep -U -p '$$$ check_exports($$$) {$$$}' -r '' common/scripts/mod/modpost.c
           ast-grep -U -p 'check_exports($$$);' -r '' common/scripts/mod/modpost.c
