--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -103,7 +103,7 @@ jobs:
           
           ast-grep -U -p '$$$ check_exports($$$) {$$$}' -r '' common/scripts/mod/modpost.c
           ast-grep -U -p 'check_exports($$$);' -r '' common/scripts/mod/modpost.c
-          sed -i '/config KSU/,/help/{s/default y/default m/}' common/drivers/kernelsu/Kconfig
+          sed -i s/'obj-.*kernelsu.o'/'obj-m += kernelsu.o'/g common/drivers/kernelsu/Makefile
           echo "drivers/kernelsu/kernelsu.ko" >> common/android/gki_aarch64_modules
 
           # bazel build, android14-5.15, android14-6.1 use bazel
