--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -65,7 +65,7 @@ jobs:
           grep -q "kernelsu" "$DRIVER_MAKEFILE" || printf "\nobj-\$(CONFIG_KSU) += kernelsu/\n" >> "$DRIVER_MAKEFILE"
           grep -q "kernelsu" "$DRIVER_KCONFIG" || sed -i "/endmenu/i\\source \"drivers/kernelsu/Kconfig\"" "$DRIVER_KCONFIG"
           echo "[+] Apply KernelSU patches"
-          cd $GKI_ROOT/common/ && curl -sL https://raw.githubusercontent.com/zhlhlf/make_kernel-clang/main/patches.sh | bash
+          # cd $GKI_ROOT/common/ && curl -sL https://raw.githubusercontent.com/zhlhlf/make_kernel-clang/main/patches.sh | bash
 
           if [ ${{ inputs.debug }} = "true" ]; then
             echo "[+] Enable debug features for kernel"
