--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -6,9 +6,9 @@ on:
       tag:
         required: true
         type: string
-        default: android-4.19-stable
+        default: common-android-4.19-stable
         description: >
-          android12-5.10-2024-05
+          common-android12-5.10-2024-05
 
       ksu_v:
         required: true
@@ -17,13 +17,15 @@ on:
         description: >
           ksu branch
 
-          
       debug:
         required: false
         type: boolean
         default: false
         
-
+      upload:
+        description: '[0,1]->[one,release]'
+        required: true
+        default: '0' 
 
 jobs:
   build:
@@ -39,14 +41,7 @@ jobs:
           cd $GITHUB_WORKSPACE
           sudo apt-get install repo -y > /dev/null
           mkdir android-kernel && cd android-kernel
-          repo init --depth=1 --u https://android.googlesource.com/kernel/manifest -b common-${{ inputs.tag }} --repo-rev=v2.16
-          REMOTE_BRANCH=$(git ls-remote https://android.googlesource.com/kernel/common ${{ inputs.tag }})
-          echo REMOTE_BRANCH
-          if grep -q deprecated <<< $REMOTE_BRANCH; then
-            echo "Found deprecated branch: ${{ inputs.tag }}"
-            sed -i 's/"${{ inputs.tag }}"/"deprecated\/${{ inputs.tag }}"/g' .repo/manifests/default.xml
-            cat .repo/manifests/default.xml
-          fi
+          repo init --depth=1 --u https://android.googlesource.com/kernel/manifest -b ${{ inputs.tag }} --repo-rev=v2.16
           repo --trace sync -c -j$(nproc --all) --no-tags
           df -h
 
@@ -65,6 +60,7 @@ jobs:
           grep -q "kernelsu" "$DRIVER_MAKEFILE" || printf "\nobj-\$(CONFIG_KSU) += kernelsu/\n" >> "$DRIVER_MAKEFILE"
           grep -q "kernelsu" "$DRIVER_KCONFIG" || sed -i "/endmenu/i\\source \"drivers/kernelsu/Kconfig\"" "$DRIVER_KCONFIG"
           echo "[+] Apply KernelSU patches"
+          
           # cd $GKI_ROOT/common/ && curl -sL https://raw.githubusercontent.com/zhlhlf/make_kernel-clang/main/patches.sh | bash
 
           if [ ${{ inputs.debug }} = "true" ]; then
@@ -146,10 +142,15 @@ jobs:
           ls 666
           llvm-strip-15 -d 666/kernelsu.ko
 
-      - name: Upload LKM
+      - name: 上传到release
+        if: inputs.upload  == '1'
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ github.run_number }}
-          name: ${{ inputs.tag }}_${{ github.run_number }}
+          tag: "${{ env.DEVICE }}_${{ github.run_number }}"
+          name: "${{ github.run_number }}"
           artifacts: '666/*'
 
+      - name: 上传到onedrive
+        if: inputs.upload  == '0'
+        run: |
+           wget -q https://raw.githubusercontent.com/zhlhlf/text/main/onedrive_mount.sh && sh onedrive_mount.sh ${{ secrets.RCK }} 临时存放文件
