--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -137,17 +137,17 @@ jobs:
       - name: Prepare artifacts
         run: |
           mkdir 666
-          cp -r `find -name "kernelsu.ko" | sed -n 1p` 666/ || echo "no found ko"
-          cp -r `find -name "Image" | sed -n 1p` 666/ || echo 
+          cp -r `find -name "kernelsu.ko" | sed -n 1p` 666/${{ inputs.tag }}_ksu_${{ inputs.ksu_v }}.ko || echo "no found ko"
+          cp -r `find -name "Image" | sed -n 1p` 666/${{ inputs.tag }}_Image || echo 
           ls 666
-          llvm-strip-15 -d 666/kernelsu.ko
+          llvm-strip-15 -d 666/${{ inputs.tag }}_ksu_${{ inputs.ksu_v }}.ko
 
       - name: 上传到release
         if: inputs.upload  == '1'
         uses: ncipollo/release-action@v1
         with:
-          tag: "${{ env.DEVICE }}_${{ github.run_number }}"
-          name: "${{ github.run_number }}"
+          tag: "${{ inputs.tag }}_${{ github.run_number }}"
+          name: "${{ inputs.tag }}_${{ github.run_number }}"
           artifacts: '666/*'
 
       - name: 上传到onedrive
