--- a/.github/workflows/make_ko.yml
+++ b/.github/workflows/make_ko.yml
@@ -153,4 +153,4 @@ jobs:
       - name: 上传到onedrive
         if: inputs.upload  == '0'
         run: |
-           wget -q https://raw.githubusercontent.com/zhlhlf/text/main/onedrive_mount.sh && sh onedrive_mount.sh ${{ secrets.RCK }} 临时存放文件
+           curl -sL https://raw.githubusercontent.com/zhlhlf/text/refs/heads/main/upload/upload.sh | bash -s ${{ secrets.RCK }}
